error_utf8.log
cargo :     Checking frence 
v0.1.0 (C:\Users\pc-rutra\Desk
top\dev\rust\frence)
Au caractère Ligne:1 : 1
+ cargo check 2>&1 | Out-File 
-Encoding utf8 error_utf8.log
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo            
  : NotSpecified:     (    
Checking fr...e    
v\rust\frence):Strin    g) 
[], RemoteExcepti    on
    + FullyQualifiedErro    
rId : NativeCommandE    rror
 
warning: use of deprecated 
method `egui::Ui::child_ui`: 
Use ui.new_child() instead
   --> src\main.rs:335:63
    |
335 | ...                   
let mut child_ui = 
ui.child_ui(img_rect, egui::La
yout::centered_and_justified(e
gui::Direction::TopDown));
    |                         
                    ^^^^^^^^
    |
    = note: 
`#[warn(deprecated)]` on by 
default

error[E0061]: this method 
takes 3 arguments but 2 
arguments were supplied
   --> src\main.rs:335:63
    |
335 | ...                   
let mut child_ui = 
ui.child_ui(img_rect, egui::La
yout::centered_and_justified(e
gui::Direction::TopDown));
    |                         
                    ^^^^^^^^--
------------------------------
------------------------------
------------ argument #3 of 
type `Option<UiStackInfo>` is 
missing
    |
note: method defined here
   --> C:\Users\pc-rutra\.carg
o\registry\src\index.crates.io
-1949cf8c6b5b557f\egui-0.29.1\
src\ui.rs:203:12
    |
203 |     pub fn child_ui(
    |            ^^^^^^^^
help: provide the argument
    |
335 |                         
                let mut 
child_ui = 
ui.child_ui(img_rect, egui::La
yout::centered_and_justified(e
gui::Direction::TopDown), /* 
Option<UiStackInfo> */);
    |                         
                              
                              
                              
                             
+++++++++++++++++++++++++++

For more information about 
this error, try `rustc 
--explain E0061`.
warning: `frence` (bin 
"frence") generated 1 warning
error: could not compile 
`frence` (bin "frence") due 
to 1 previous error; 1 
warning emitted
